--- a/client/src/app/components/coaster-search/coaster-search.component.html
+++ b/client/src/app/components/coaster-search/coaster-search.component.html
@@ -1,14 +1,39 @@
-<input class="search-input" type="text" [(ngModel)]="searchInput" (keyup.enter)="search()" />
-<button class="search-button" (click)="search()">
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-    </svg>
-</button>
-<div *ngIf="searching">
-    Loading...
-</div>
-<div *ngIf="!searching">
-    <div *ngFor="let result of searchResults">
-        <a href="/coaster?id={{ result.id }}">{{ result.name }} ({{ result.parkName }})</a>
+<div class="search-container">
+    <input class="search-input" type="text" placeholder="Search for a coaster." [(ngModel)]="searchInput" (keyup.enter)="search()" />
+    <button class="search-button" (click)="search()">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+        </svg>
+    </button>
+    <div *ngIf="searching">
+        Loading...
+    </div>
+    <div *ngIf="!searching">
+        <a href="/coaster?id={{ result.id }}" class="search-result" *ngFor="let result of searchResults">
+            <div class="search-result-img-container">
+                <div class="search-result-img" [style.background-image]="'url(' + result.imgUrl + ')'">
+                    <div class="search-result-info">
+                        <div class="search-result-info-place">
+                            <p class="search-result-title">{{ result.name }}</p>
+                            <p class="search-result-park">{{ result.parkName }}</p>
+                            <p class="search-result-location">{{ result.location }}</p>
+                        </div>
+                        <div class="search-result-info-rating">
+                            <div class="search-result-info-rating-left">
+                                <p class="search-result-title">{{ result.avgRating }}</p>
+                            </div>
+                            <div class="search-result-info-rating-right">
+                                <p style="margin-top: 5px;">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                        <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"></path>
+                                    </svg>
+                                </p>
+                            </div>
+                            <p class="search-result-vote-count">4,237 votes</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </a>
     </div>
 </div>
