--- a/client/src/base.scss
+++ b/client/src/base.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Noto Sans JP', sans-serif;
+    font-family: 'Work Sans', sans-serif;
     font-size: 12pt;
     margin: 0;
 }
